--- a/src/theme.less
+++ b/src/theme.less
@@ -1,13 +1,24 @@
-@primary-color: #01dbc1;
-@link-color: #01dbc1;
+//Color
+@primary-color: #2a81ea;
+@link-color: #2a81ea;
 @success-color: #1ee0ac;
 @warning-color: #f4bd0e;
 @error-color: #e85347;
-@font-size-base: 16px;
-@heading-color: #364a63;
+@disabled-color: #858e9b;
+
+//Font-size
+@font-size-base: 1rem;
+@line-height-base: 1.5;
 @text-color: #3f506f;
 @text-color-secondary: #5e7ea9;
-@disabled-color: #858e9b;
+
+@font-size-heading: 1.875rem;
+@font-weight-heading: 700;
+@heading-color: #50658e;
+
+@font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu',
+  'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
 @border-radius-base: 4px;
 @border-color-base: #e5e9f2;
-@box-shadow-base: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+@box-shadow-base: rgba(80, 101, 142, 0.08) 0px 5px 40px 0px;
