--- a/src/components/Home/About/index.module.less
+++ b/src/components/Home/About/index.module.less
@@ -1,15 +1,14 @@
 @import '../../../theme.less';
 .row-about {
-  padding: 100px 85px;
-  background-color: white;
-  .name {
-    color: @primary-color;
-    font-weight: bold;
-  }
-  .title {
-    font-size: 2rem;
-    font-weight: 700;
-  }
+  margin: 100px auto;
+}
+.name {
+  color: @primary-color;
+  font-weight: bold;
+}
+.title {
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 .row-spread {
