--- a/src/components/Home/About/SpreadCard/index.module.less
+++ b/src/components/Home/About/SpreadCard/index.module.less
@@ -2,6 +2,7 @@
 .container {
   background-color: white;
   box-shadow: @box-shadow-base;
+  margin-top: 40px;
   .box-image {
     border-bottom: 6px solid #9cc2f7;
     .image {
