--- a/src/components/Home/FAQ/TabContent/index.module.less
+++ b/src/components/Home/FAQ/TabContent/index.module.less
@@ -1,10 +1,13 @@
-p {
-  color: #3d4b69;
-  line-height: 1.5;
+.site-collapse-custom-collapse {
+  p {
+    color: #3d4b69;
+    line-height: 1.5;
+  }
+  h5 {
+    font-size: 16px;
+  }
 }
-h5 {
-  font-size: 16px;
-}
+
 .list-dot {
   li {
     position: relative;
