add page doctors list

--- a/src/App.less
+++ b/src/App.less
@@ -59,6 +59,10 @@ ul {
   font-size: 1.5rem;
 }
 
+.ant-input {
+  padding: 3px 11px;
+}
+
 .mobileHidden {
   display: flex;
   width: fit-content;
@@ -74,4 +78,8 @@ ul {
   .mobileVisible {
     display: flex;
   }
+}
+
+.app__content {
+  background: rgb(255, 255, 255);
 }
