--- a/src/theme.less
+++ b/src/theme.less
@@ -7,7 +7,7 @@
 @disabled-color: #858e9b;
 
 //Font-size
-@font-size-base: 1rem;
+// @font-size-base: 1rem;
 @line-height-base: 1.5;
 @text-color: #3f506f;
 @text-color-secondary: #5e7ea9;
