--- a/src/App.less
+++ b/src/App.less
@@ -59,6 +59,14 @@ ul {
   font-size: 1.5rem;
 }
 
+.ant-picker {
+  width: 100%;
+}
+
+.ant-input-number {
+  width: 100%;
+}
+
 .mobileHidden {
   display: flex;
   width: fit-content;
