--- a/src/index.less
+++ b/src/index.less
@@ -10,6 +10,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-html {
-  font-size: 16px;
+.steps-action {
+  margin-top: 24px;
 }
