--- a/src/theme.less
+++ b/src/theme.less
@@ -7,18 +7,19 @@
 @disabled-color: #858e9b;
 
 //Font-size
-@font-size-base: 1rem;
-@line-height-base: 1.5;
+@font-size-base: 16px;
+// @line-height-base: 1.5;
 @text-color: #3f506f;
 @text-color-secondary: #5e7ea9;
 
 @font-size-heading: 1.875rem;
 @font-weight-heading: 700;
 @heading-color: #50658e;
-
 @font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu',
-  'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 
 @border-radius-base: 4px;
+@btn-border-radius-base: 8px;
 @border-color-base: #e5e9f2;
 @box-shadow-base: rgba(80, 101, 142, 0.08) 0px 5px 40px 0px;
+
