--- a/src/App.less
+++ b/src/App.less
@@ -58,7 +58,9 @@ ul {
 .ant-drawer-close {
   font-size: 1.5rem;
 }
-
+.ant-input {
+  padding: 4px 11px;
+}
 .mobileHidden {
   display: flex;
   width: fit-content;
