--- a/src/components/Register/Agreement/index.module.less
+++ b/src/components/Register/Agreement/index.module.less
@@ -4,3 +4,22 @@
     margin-bottom: 20px;
   }
 }
+
+.otp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  p {
+    text-align: center;
+  }
+}
+
+.otp-input {
+  width: 3rem !important;
+  height: 3rem;
+  margin: 0 10px;
+  font-size: 2rem;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
