--- a/src/components/Register/Agreement/index.module.less
+++ b/src/components/Register/Agreement/index.module.less
@@ -23,3 +23,15 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   text-align: center;
 }
+
+@media only screen and (max-width: 576px) {
+  .otp-input {
+  width: 2rem !important;
+  height: 2rem;
+  margin: 0 4px;
+  font-size: 1rem;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+}
