fix css in page doctor detail

--- a/src/pages/DoctorDetail/index.module.less
+++ b/src/pages/DoctorDetail/index.module.less
@@ -3,6 +3,41 @@
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 15px;
+
+  .title {
+    font-size: 1.875rem;
+    font-weight: bold;
+  }
+  .description {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+
+  .experience {
+    display: flex;
+  }
+  .year {
+    margin-right: 50px;
+    color: rgb(175, 222, 255);
+  }
+  .desExperience,
+  .year {
+    font-size: 1rem;
+  }
+
+  .review,
+  .footerCard {
+    font-size: 1rem;
+  }
+  .footerCard {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+  .desFooter {
+    margin-bottom: 0;
+  }
 }
 .content {
   background: rgb(240, 245, 249);
@@ -36,14 +71,5 @@
     align-items: center;
     border-radius: 30px;
     padding: 1.5rem 1rem;
-  }
-
-  .title {
-    font-size: 1.875rem;
-    font-weight: bold;
-  }
-  .description {
-    font-size: 1rem;
-    margin-bottom: 10px;
   }
 }
