fix file name to deploy

--- a/src/App.less
+++ b/src/App.less
@@ -72,6 +72,12 @@ ul {
   padding: 3px 11px;
 }
 
+.ant-card-head {
+  color: #50658e;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
 .mobileHidden {
   display: flex;
   width: fit-content;
