--- a/src/App.less
+++ b/src/App.less
@@ -68,16 +68,21 @@ ul {
   font-size: 1.5rem;
 }
 
-.ant-input {
-  padding: 3px 11px;
-}
-
 .ant-card-head {
   color: #50658e;
   font-weight: 500;
   font-size: 1.5rem;
 }
 
+.ant-input {
+  padding: 3px 11px;
+}
+.ant-picker {
+  padding: 3px 11px;
+}
+.ant-btn {
+  padding: 4px 15px;
+}
 .mobileHidden {
   display: flex;
   width: fit-content;
