--- a/src/App.less
+++ b/src/App.less
@@ -59,6 +59,16 @@ ul {
   margin-top: 40px;
 }
 
+.ant-picker-calendar-date {
+  border: 2px solid #f0f0f0;
+}
+
+.ant-btn {
+  padding: 0rem 1rem;
+}
+.ant-picker {
+  padding: 3px 11px;
+}
 .ant-card {
   border-radius: 12px;
   box-shadow: @box-shadow-base;
