--- a/src/components/HealthDeclaration/DomesticMove/index.module.less
+++ b/src/components/HealthDeclaration/DomesticMove/index.module.less
@@ -1,8 +1,7 @@
 //btn
 .btn-submit {
   height: 100%;
-  width: 20%;
   margin: 0 auto;
   padding: 4px;
-  border-radius: 16px;
+  border-radius: 16px !important;
 }
