--- a/src/pages/HealthDeclaration/index.module.less
+++ b/src/pages/HealthDeclaration/index.module.less
@@ -13,7 +13,6 @@
   color: @text-color;
 }
 .description {
-  width: 488px;
   font-size: 18px;
   color: @text-color;
   margin-bottom: 20px;
@@ -24,13 +23,13 @@
 
 .card {
   width: 100%;
+  height: 100%;
 }
 .card-content {
-  min-height: 70px;
-  line-height: 70px;
   text-align: center;
   font-size: 1.25rem;
   font-weight: 600;
+  margin: auto;
 }
 
 .form-container {
