Fix some UI, link

--- a/src/components/Appointment/Register/index.module.less
+++ b/src/components/Appointment/Register/index.module.less
@@ -10,3 +10,13 @@
     padding: 20px 40px;
   }
 }
+@media (max-width: 768px) {
+  .breadcrumb {
+    display: none;
+  }
+  .container {
+    .right-content {
+      padding: 20px 0px;
+    }
+  }
+}
