--- a/src/pages/Searching/Complaint/index.module.less
+++ b/src/pages/Searching/Complaint/index.module.less
@@ -24,6 +24,9 @@
       margin-bottom: 4px;
     }
   }
+  .result {
+    margin: 0px 50px;
+  }
 }
 @media (max-width: 768px) {
   .breadcrumb {
@@ -31,6 +34,9 @@
   }
   .contain {
     .card {
+      margin: 0px 20px;
+    }
+    .result {
       margin: 0px 20px;
     }
   }
