fix bug Bao review

--- a/src/components/Volunteer/VolunteerForm/index.module.less
+++ b/src/components/Volunteer/VolunteerForm/index.module.less
@@ -9,3 +9,18 @@
 .yearPicker {
   height: 35px;
 }
+
+.wrapper {
+  padding: 0 2rem;
+
+  .content {
+    font-style: italic;
+    font-size: 0.95rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .button {
+    width: 100%;
+  }
+}
