--- a/src/components/Store/StoreForm/index.module.less
+++ b/src/components/Store/StoreForm/index.module.less
@@ -15,3 +15,9 @@
   font-size: 1.125rem;
   font-weight: @font-weight-heading;
 }
+
+@media screen and (max-width: 576px) {
+  .button {
+    width: 100%;
+  }
+}
