--- a/src/components/Doctor/Filter/index.module.less
+++ b/src/components/Doctor/Filter/index.module.less
@@ -9,17 +9,19 @@
 
   .filterTitle {
     font-weight: bold;
-    font-size: 1.125rem;
+    font-size: 1rem;
     margin-bottom: 0.5rem;
   }
 
   .filterCheckbox {
     margin-bottom: 10px;
+    font-size: 0.87rem;
   }
 
   .filterButton {
     border-radius: 20px;
-    color: rgb(103, 193, 255);
+    color: rgb(60, 144, 201);
     font-weight: bold;
+    padding: 0 50px;
   }
 }
