Define routes, news page

--- a/src/App.less
+++ b/src/App.less
@@ -63,10 +63,10 @@ ul {
   border: 2px solid #f0f0f0;
 }
 
-.ant-btn {
-  padding: 0rem 1rem;
-  border-radius: 4px;
-}
+// .ant-btn {
+//   padding: 0rem 1rem;
+//   border-radius: 4px;
+// }
 .ant-picker {
   padding: 3px 11px;
   width: 100%;
@@ -88,9 +88,9 @@ ul {
   padding: 4px 11px;
 }
 
-.ant-btn {
-  padding: 1px 4px;
-}
+// .ant-btn {
+//   padding: 1px 4px;
+// }
 
 .ant-checkbox {
   margin-right: 20px;
@@ -107,6 +107,11 @@ ul {
 }
 .mobileVisible {
   display: none;
+}
+
+.banner {
+  background-image: url('assets/images/shape-a.png');
+  height: 360px;
 }
 
 @media only screen and (max-width: 768px) {
