Fix UI community

--- a/src/App.less
+++ b/src/App.less
@@ -53,6 +53,7 @@ ul {
 .ant-layout-content {
   min-height: 80vh;
   padding-top: 60px;
+  background-color: #F7F9FE !important;
 }
 
 .ant-layout-footer {
@@ -96,11 +97,11 @@ ul {
   margin-right: 20px;
 }
 
-.ant-card-head {
-  color: #50658e;
-  font-weight: 500;
-  font-size: 1.5rem;
-}
+// .ant-card-head {
+//   color: #50658e;
+//   font-weight: 500;
+//   font-size: 1.5rem;
+// }
 .mobileHidden {
   display: flex;
   width: fit-content;
@@ -112,6 +113,12 @@ ul {
 .banner {
   background-image: url('assets/images/shape-a.png');
   height: 360px;
+}
+
+.banner-sm {
+  background-image: url('assets/images/shape-a.png');
+  height: 280px;
+  object-fit: cover;
 }
 
 @media only screen and (max-width: 768px) {
