--- a/src/components/Appointment/Register/index.module.less
+++ b/src/components/Appointment/Register/index.module.less
@@ -1,9 +1,8 @@
-.breadcrumb {
-  padding: 15px 0;
-  min-height: 40px;
-  margin-top: 20px;
-  margin: 0px 50px;
+.banner {
+  background-image: url('../../../assets/images/shape-a.png');
+  height: 240px;
 }
+
 .container {
   margin: 20px 50px;
   .right-content {
