--- a/src/components/Appointment/index.module.less
+++ b/src/components/Appointment/index.module.less
@@ -1,11 +1,9 @@
-.breadcrumb {
-  padding: 15px 0;
-  min-height: 40px;
-  margin-top: 20px;
-  margin: 0px 50px;
+.banner {
+  background-image: url('../../assets/images/shape-a.png');
+  height: 200px;
 }
+
 .container {
-  margin: 20px 50px;
   .card {
     margin-top: 16px;
   }
@@ -14,7 +12,7 @@
   }
 }
 .btn {
-  margin-right: 8px;
+  margin-right: 20px;
 }
 @media (max-width: 768px) {
   .container {
