--- a/src/App.less
+++ b/src/App.less
@@ -1,6 +1,9 @@
 @import '~antd/dist/antd.less';
 @import 'theme.less';
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   overflow-x: hidden;
 }
@@ -53,7 +56,7 @@ ul {
 .ant-layout-content {
   min-height: 80vh;
   padding-top: 60px;
-  background-color: #F7F9FE !important;
+  background-color: #f7f9fe !important;
 }
 
 .ant-layout-footer {
