--- a/src/components/Home/About/index.module.less
+++ b/src/components/Home/About/index.module.less
@@ -2,13 +2,21 @@
 .row-about {
   margin: 100px auto;
 }
-.name {
+.subtitle {
   color: @primary-color;
-  font-weight: bold;
+  font-size: 1.125rem;
+  margin-bottom: 0.125rem;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 }
+
 .title {
-  font-size: 2rem;
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  color: #50658e;
   font-weight: 700;
+  line-height: 1.3;
+  margin-bottom: 0.5rem;
 }
 
 .row-spread {
