--- a/src/components/Home/FAQ/index.module.less
+++ b/src/components/Home/FAQ/index.module.less
@@ -9,15 +9,20 @@
     .section-head {
       padding-bottom: 40px;
       text-align: center;
+      text-transform: uppercase;
       .subtitle {
-        text-transform: uppercase;
-        color: #2a81ea;
-        font-size: 12px;
+        color: @primary-color;
+        font-size: 1.125rem;
         margin-bottom: 0.125rem;
         letter-spacing: 0.04em;
       }
+
       .title {
-        text-transform: uppercase;
+        font-size: 2.5rem;
+        color: #50658e;
+        font-weight: 700;
+        line-height: 1.3;
+        margin-bottom: 0.5rem;
       }
     }
     .section-content {
