--- a/src/components/Home/News/index.module.less
+++ b/src/components/Home/News/index.module.less
@@ -3,15 +3,18 @@
   max-width: 800px;
   margin: auto;
   text-align: center;
-  h5 {
+  .subtitle {
     color: @primary-color;
-    font-weight: 700;
     font-size: 1.125rem;
+    margin-bottom: 0.125rem;
+    letter-spacing: 0.04em;
   }
-  h2 {
+
+  .title {
+    font-size: 2.5rem;
+    color: #50658e;
+    font-weight: 700;
     line-height: 1.3;
-    text-align: center;
-    font-size: @font-size-heading;
-    font-weight: 800;
+    margin-bottom: 0.5rem;
   }
 }
