--- a/src/components/Home/Prevention/index.module.less
+++ b/src/components/Home/Prevention/index.module.less
@@ -8,14 +8,15 @@
 
 .subtitle {
   color: @primary-color;
-  font-weight: 600;
   font-size: 1.125rem;
-  margin-bottom: 0px;
+  margin-bottom: 0.125rem;
+  letter-spacing: 0.04em;
 }
 
 .title {
-  margin: 20px 0px 40px;
-  text-align: center;
-  font-size: @font-size-heading;
-  font-weight: @font-weight-heading;
+  font-size: 2.5rem;
+  color: #50658e;
+  font-weight: 700;
+  line-height: 1.3;
+  margin-bottom: 0.5rem;
 }
