--- a/src/App.less
+++ b/src/App.less
@@ -61,22 +61,30 @@ ul {
 
 .ant-layout-footer {
   margin-top: 40px;
+  background-color: #50658E;
+  color: #fff;
 }
 
 .ant-picker-calendar-date {
   border: 2px solid #f0f0f0;
 }
 
-// .ant-btn {
-//   padding: 0rem 1rem;
-//   border-radius: 4px;
-// }
+.ant-collapse, .ant-collapse-item {
+  background-color: #F7FAFE;
+  border-color: #e7e8ff !important;
+  border-radius: 16px;
+}
+
+.ant-collapse-content  {
+  border-color: #e7e8ff !important;
+}
+
 .ant-picker {
   padding: 3px 11px;
   width: 100%;
 }
 .ant-card {
-  border-radius: 12px;
+  border-radius: 16px;
   box-shadow: @box-shadow-base;
 }
 
