--- a/src/components/Home/About/SpreadCard/index.module.less
+++ b/src/components/Home/About/SpreadCard/index.module.less
@@ -3,6 +3,9 @@
   background-color: white;
   box-shadow: @box-shadow-base;
   margin-top: 40px;
+  height: 100%;
+  border-radius: 16px;
+
   .box-image {
     border-bottom: 6px solid #9cc2f7;
     .image {
