--- a/src/components/Home/News/NewsCard/index.module.less
+++ b/src/components/Home/News/NewsCard/index.module.less
@@ -5,6 +5,8 @@
   margin: 30px 10px 0 10px;
   text-align: center;
   box-shadow: @box-shadow-base;
+  border-radius: 16px;
+  height: 100%;
   .image {
     width: 100%;
     box-shadow: @box-shadow-base;
