--- a/src/components/Home/About/MoreInfo/index.module.less
+++ b/src/components/Home/About/MoreInfo/index.module.less
@@ -1,7 +1,7 @@
 @import '../../../../theme.less';
 .container {
-  border: 1px solid @border-color-base;
-  border-radius: 4px;
+  border: 1px solid #e7e8ff;
+  border-radius: 16px;
   padding: 0 10px;
   background-color: white;
   box-shadow: @box-shadow-base;
