--- a/src/components/Home/FAQ/index.module.less
+++ b/src/components/Home/FAQ/index.module.less
@@ -1,5 +1,6 @@
 .section-faq {
   padding: 50px 0;
+  background-color: #fff;
   .container {
     width: 100%;
     padding-right: 15px;
@@ -56,6 +57,7 @@
 @media (min-width: 576px) {
   .section-faq {
     padding: 90px 0;
+    background-color: #fff;
     .container {
       max-width: 540px;
       .section-head {
@@ -75,6 +77,7 @@
 @media (min-width: 768px) {
   .section-faq {
     padding: 90px 0;
+    background-color: #fff;
     .container {
       max-width: 720px;
       .section-head {
@@ -86,6 +89,7 @@
 @media (min-width: 992px) {
   .section-faq {
     padding: 120px 0;
+    background-color: #fff;
     .container {
       max-width: 960px;
       .section-head {
@@ -96,6 +100,7 @@
 }
 @media (min-width: 1200px) {
   .section-faq {
+    background-color: #fff;
     .container {
       max-width: 1140px;
     }
