--- a/src/components/Home/Treatment/index.module.less
+++ b/src/components/Home/Treatment/index.module.less
@@ -24,7 +24,7 @@
       justify-content: space-between;
       margin: -15px;
       .text-block {
-        color: @border-color-base;
+        color: #fff;
         .title + p {
           padding-top: 0.875rem;
         }
@@ -46,7 +46,7 @@
 
       .title {
         text-align: left;
-        color: @border-color-base;
+        color: #fff;
         font-weight: @font-weight-heading;
       }
       .col-left {
@@ -58,8 +58,7 @@
         padding: 15px;
         .box {
           padding: 2.375rem 2.5rem;
-
-          border-radius: 4px;
+          border-radius: 16px;
           background-color: #1b47a1 !important;
           p {
             font-size: 0.9375rem;
