--- a/src/pages/DoctorDetail/index.module.less
+++ b/src/pages/DoctorDetail/index.module.less
@@ -1,5 +1,5 @@
 .wrapper {
-  margin-top: 100px !important;
+  margin-top: 60px !important;
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 15px;
@@ -18,7 +18,7 @@
   }
   .year {
     margin-right: 50px;
-    color: rgb(175, 222, 255);
+    color: #188EFC;
   }
   .desExperience,
   .year {
@@ -39,42 +39,38 @@
     margin-bottom: 0;
   }
 }
-.content {
-  background: rgb(240, 245, 249);
-  margin: 0 auto;
-  max-width: 1200px;
-  padding: 0 15px;
 
-  .doctorInfo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .doctorTittle,
-  .doctorName,
-  .doctorRate,
-  .doctorPosition,
-  .doctorExperience {
-    margin-bottom: 20px;
-    font-size: 1rem;
-  }
 
-  .doctorTittle {
-    font-weight: bold;
-    font-size: 1.5rem !important;
-  }
-  .doctorName {
-    font-weight: 550;
-  }
+.doctorInfo {
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+}
+.doctorTittle,
+.doctorName,
+.doctorRate,
+.doctorPosition,
+.doctorExperience {
+  margin-bottom: 6px;
+  font-size: 1rem;
+}
 
-  .doctorImage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 30px;
-    padding: 1.5rem 1rem;
-  }
+.doctorTittle {
+  font-weight: bold;
+  font-size: 1.5rem !important;
+}
+.doctorName {
+  font-weight: 550;
+}
+
+.doctorImage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  padding: 1.5rem 1rem;
+  text-align: center;
 }
 @media screen and (max-width: 766px) {
   .doctorImage {
