--- a/src/App.less
+++ b/src/App.less
@@ -132,6 +132,13 @@ ul {
   object-fit: cover;
 }
 
+.icon {
+  width: 18px;
+  height: 18px;
+  vertical-align: text-top;
+  margin-left: 4px;
+}
+
 @media only screen and (max-width: 768px) {
   .mobileHidden {
     display: none;
